namespace Assignment4;
public interface ICommand
{
  void Do();
  void Undo();
}

/*
4 commands needed
1. generate	different	random	shapes	that	are	added	to	the	canvas
2. display	the	current	canvas to	the	console
3. save	the	canvas	to	a	file
4. implement	Undo-Redo	functionality	in	your	interactive	session.	
*/